--- a/array/CMakeLists.txt
+++ b/array/CMakeLists.txt
@@ -7,4 +7,5 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 add_library(array_solutions
         BinarySearch.cpp
+        RemoveElement.cpp
 )
