提交59螺旋矩阵2

--- a/array/CMakeLists.txt
+++ b/array/CMakeLists.txt
@@ -10,4 +10,5 @@ add_library(array_solutions
         RemoveElement.cpp
         SquaresOfASortedArray.cc
         MinimumSizeSubarraySum.cc
+        SpiralMatrix2.cc
 )
