--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,9 @@ include_directories(${CMAKE_SOURCE_DIR}/include)
 
 # add all sub dirs here
 add_subdirectory(array)
+add_subdirectory(listnode)
 
 add_executable(8legs_coding main.cpp)
 
 # link all sub dirs here
-target_link_directories(8legs_coding PRIVATE array)
+target_link_directories(8legs_coding PRIVATE array listnode)
